force-app/main/default/objects/MDMReferenceCode__c/MDMReferenceCode__c.object-meta.xml
<CustomObject>
    <label>MDM 참조코드</label>
    <nameField>
        <label>MDMReferenceCode Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>