force-app/main/default/objects/MDMReferenceCode__c/fields/ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE__c</fullName>
    <label>ACTIVE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>