force-app/main/default/objects/MDMReferenceCode__c/fields/ATTR1__c.field-meta.xml
<CustomField>
    <fullName>ATTR1__c</fullName>
    <label>ATTR1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>