force-app/main/default/objects/MDMReferenceCode__c/fields/ATTR2__c.field-meta.xml
<CustomField>
    <fullName>ATTR2__c</fullName>
    <label>ATTR2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>