force-app/main/default/objects/MDMReferenceCode__c/fields/ATTR3__c.field-meta.xml
<CustomField>
    <fullName>ATTR3__c</fullName>
    <label>ATTR3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>