force-app/main/default/objects/MDMReferenceCode__c/fields/CODE__c.field-meta.xml
<CustomField>
    <fullName>CODE__c</fullName>
    <externalId>true</externalId>
    <label>CODE</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>