force-app/main/default/objects/MDMReferenceCode__c/fields/GROUPID__c.field-meta.xml
<CustomField>
    <fullName>GROUPID__c</fullName>
    <externalId>true</externalId>
    <label>GROUPID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>