force-app/main/default/objects/MDMReferenceCode__c/fields/INSTANCEID__c.field-meta.xml
<CustomField>
    <fullName>INSTANCEID__c</fullName>
    <label>INSTANCEID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>