force-app/main/default/objects/MDMReferenceCode__c/fields/NAME_EN__c.field-meta.xml
<CustomField>
    <fullName>NAME_EN__c</fullName>
    <label>NAME_EN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>