force-app/main/default/objects/MDMReferenceCode__c/fields/NAME_KO__c.field-meta.xml
<CustomField>
    <fullName>NAME_KO__c</fullName>
    <label>NAME_KO</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>