force-app/main/default/objects/MDMReferenceCode__c/fields/NAME_VI__c.field-meta.xml
<CustomField>
    <fullName>NAME_VI__c</fullName>
    <label>NAME_VI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>