force-app/main/default/objects/MDMReferenceCode__c/fields/NAME_ZH__c.field-meta.xml
<CustomField>
    <fullName>NAME_ZH__c</fullName>
    <label>NAME_ZH</label>
    <length>100</length>
    <type>Text</type>
</CustomField>