force-app/main/default/objects/MDMReferenceCode__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMReferenceCode</relationshipLabel>
    <relationshipName>MDMReferenceCode</relationshipName>
    <type>Lookup</type>
</CustomField>