force-app/main/default/objects/MDMReferenceCode__c/fields/ParentCode__c.field-meta.xml
<CustomField>
    <fullName>ParentCode__c</fullName>
    <label>ParentCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>