force-app/main/default/objects/MDMReferenceCode__c/fields/ParentGroupId__c.field-meta.xml
<CustomField>
    <fullName>ParentGroupId__c</fullName>
    <label>ParentGroupId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>