force-app/main/default/objects/MDMReferenceCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GROUPID__c</columns>
    <columns>CODE__c</columns>
    <columns>IsDefault__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>